--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^17.0.1",
     "express": "^5.1.0",
     "mongodb": "^6.17.0",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "stripe": "^18.3.0"
   }
 }
